--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -20,7 +20,7 @@
     "onesignal-expo-plugin": "2.0.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.6",
+    "react-native": "^0.76.7",
     "react-native-onesignal": "^5.0.5",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "^4.5.0",
